Creada primera exportación a windows con instalador y a linux nativo